--- a/skills.src/implementing-github-issue/SKILL.md.erb
+++ b/skills.src/implementing-github-issue/SKILL.md.erb
@@ -1,5 +1,5 @@
 <%= frontmatter(
-  description: 'Implements what is described in a GitHub issue. What this does is first devise an implementation plan from the issue, execute the plan and validate production qualiy gates. Use this when the USER is asking you to implement a GitHub issue.',
+  description: 'Implements what is described in a GitHub issue. What this does is first devise an implementation plan from the issue, execute the plan and validate production qualiy gates. Use this when the user is asking you to implement a GitHub issue.',
   metadata: {
     dependencies: 'analyzing-github-issue, validating-production-quality'
   }
@@ -8,29 +8,29 @@
 # <%= skill_goal 'Implementing a GitHub issue' %>
 
 <% define_ordered_todo_list do -%>
-  ### Analyze the Github issue requirements to get an implementation plan (can be done during PLAN mode)
+  ### Analyze the GitHub issue requirements to get an implementation plan (can be done during Plan mode)
 
-  - ALWAYS use `skill: analyzing-github-issue` to get a full implementation plan. This plan will take into consideration requirements from the issue, USER inputs and the project's context.
+  - Always use `skill: analyzing-github-issue` to get a full implementation plan. This plan will take into consideration requirements from the issue, user inputs and the project's context.
 
   ### Implement the issue following the implementation plan
 
-  - ALWAYS perform all the agreed steps from the implementation plan to implement the issue.
-  - ALWAYS perform a final verification of the implementation plan against all the actions you did. If you think some steps of the implementation plan were not implemented properly or are missing, fix it or inform the USER about those missing steps.
+  - Always perform all the agreed steps from the implementation plan to implement the issue.
+  - Always perform a final verification of the implementation plan against all the actions you did. If you think some steps of the implementation plan were not implemented properly or are missing, fix it or inform the user about those missing steps.
 
   ### Validate all production quality checks
 
-  - ALWAYS use `skill: validating-production-quality` before attempting task completion to make sure that all needed quality gates are passing.
+  - Always use `skill: validating-production-quality` before attempting task completion to make sure that all needed quality gates are passing.
 <% end -%>
 
 ## When to use it
 
-- You MUST use it every time the USER asks you to implement a Github issue.
-- You MUST use it every time another skill specifically mentions `skill: <%= skill_name %>`.
-- You can use it every time you need to implement a Github issue.
+- Always use it every time the user asks you to implement a GitHub issue.
+- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Always use it every time you need to implement a GitHub issue.
 
 ## Usage and code examples
 
-### Implementing a Github issue
+### Implementing a GitHub issue
 
 This skill should perform the following steps:
 1. Use the skill named analyzing-github-issue to get an implementation plan
