--- a/skills.src/updating-doc/SKILL.md.erb
+++ b/skills.src/updating-doc/SKILL.md.erb
@@ -1,12 +1,12 @@
-<%= frontmatter(description: 'Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the USER is asking for documentation or README to be updated.') %>
+<%= frontmatter(description: 'Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the user is asking for documentation or README to be updated.') %>
 
 # <%= skill_goal 'Updating documentation' %>
 
 <% define_ordered_todo_list do -%>
   ### Check the existing README content
 
-  - ALWAYS read the existing README content and think about which parts of it should be updated with the task you just implemented.
-  - ALWAYS adapt the content to what is relevant for the task you implemented.
+  - Always read the existing README content and think about which parts of it should be updated with the task you just implemented.
+  - Always adapt the content to what is relevant for the task you implemented.
 
   For example, if README.md has such a section:
   ```markdown
@@ -28,7 +28,7 @@
 
   ### Update the README CLI usage section
 
-  - ALWAYS check if the real CLI options are documented correctly in the Usage section of the README file.
+  - Always check if the real CLI options are documented correctly in the Usage section of the README file.
 
   For example, if README.md has such a section:
   ```markdown
@@ -48,7 +48,7 @@
   ### Update the README table of content
 
   - Devise the hierarchical list of all Markdown headers that are in the README file, of all levels. Don't forget about headers that you may have added in previous steps.
-  - ALWAYS make sure that the section "Table of Contents" of the README file is listing exactly all the headers as local links to their section, and indented in accordance with their hierarchical level in the file.
+  - Always make sure that the section "Table of Contents" of the README file is listing exactly all the headers as local links to their section, and indented in accordance with their hierarchical level in the file.
 
   For example, if README.md has such a section:
   ```markdown
@@ -74,9 +74,9 @@
 
 ## When to use it
 
-- You MUST use it every time the USER asks you to update documentation.
-- You MUST use it every time another skill specifically mentions `skill: <%= skill_name %>`.
-- You can use it every time you think documentation should be updated after implementing some changes in the code or tests.
+- Always use it every time the user asks you to update documentation.
+- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Use it every time you think documentation should be updated after implementing some changes in the code or tests.
 
 ## Usage and code examples
 
