--- a/skills.src/validating-production-quality/SKILL.md.erb
+++ b/skills.src/validating-production-quality/SKILL.md.erb
@@ -1,5 +1,5 @@
 <%= frontmatter(
-  description: 'Validates that the task is following all production-grade quality checks. What this does is check for regressions, update documentation, update the branch on the latest base, commit any remaining changes, push them on Github and create a Pull Request. Use this when attempting task completion on a task or when the USER asks for validating production qulity gates.',
+  description: 'Validates that the task is following all production-grade quality checks. What this does is check for regressions, update documentation, update the branch on the latest base, commit any remaining changes, push them on GitHub and create a Pull Request. Use this when attempting task completion on a task or when the user asks for validating production qulity gates.',
   metadata: {
     dependencies: 'updating-doc, committing-changes, syncing-branch-with-base, creating-pull-request'
   }
@@ -10,8 +10,8 @@
 <% define_ordered_todo_list do -%>
   ### Fix any potential regression
 
-  - ALWAYS run all test scenarios.
-  - ALWAYS fix all the failures that you see in the tests output.
+  - Always run all test scenarios.
+  - Always fix all the failures that you see in the tests output.
 
   For example, in a Python project:
   ```bash
@@ -20,20 +20,20 @@
 
   ### Update documentation
 
-  - ALWAYS use `skill: updating-doc` to update the project documentation.
+  - Always use `skill: updating-doc` to update the project documentation.
 
   ### Commit all pending modifications
 
-  - ALWAYS use `skill: committing-changes` to commit all your changes in the current branch.
+  - Always use `skill: committing-changes` to commit all your changes in the current branch.
 
   ### Sync the branch with its base
 
-  - ALWAYS use `skill: syncing-branch-with-base` to make sure the current branch is up-to-date with its base.
+  - Always use `skill: syncing-branch-with-base` to make sure the current branch is up-to-date with its base.
 
   ### Remove any merge commit in the current branch
 
-  - ALWAYS check that there is no merge commit between the current branch and its base.
-  - IF you find any merge commit, THEN ALWAYS remove them by rebasing the branch in a linear way, using `cli: git rebase`, and push again to the Github remote using `--force-with-lease` option.
+  - Always check that there is no merge commit between the current branch and its base.
+  - If you find any merge commit, then always remove them by rebasing the branch in a linear way, using `cli: git rebase`, and push again to the GitHub remote using `--force-with-lease` option.
 
   Example, in case of merge commits found:
   ```bash
@@ -44,8 +44,8 @@
 
   ### Create a Pull Request for the current branch
 
-  - ALWAYS check on the corresponding GitHub project if there is already a Pull Request created for the current branch.
-  - IF there isn't any Pull Request for the current branch, THEN ALWAYS use `skill: creating-pull-request` to create one.
+  - Always check on the corresponding GitHub project if there is already a Pull Request created for the current branch.
+  - If there isn't any Pull Request for the current branch, then always use `skill: creating-pull-request` to create one.
 
   Example to check for a Pull Request:
   ```bash
@@ -56,9 +56,9 @@
 
 ## When to use it
 
-- You MUST use it every time the USER asks you to validate production quality gates.
-- You MUST use it every time another skill specifically mentions `skill: <%= skill_name %>`.
-- You can use it just before attempting completion of a task that is a full production-grade feature or bug fix.
+- Always use it every time the user asks you to validate production quality gates.
+- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Always use it just before attempting completion of a task that is a full production-grade feature or bug fix.
 
 ## Usage and code examples
 
