--- a/skills.src/committing-changes/SKILL.md.erb
+++ b/skills.src/committing-changes/SKILL.md.erb
@@ -1,4 +1,4 @@
-<%= frontmatter(description: 'Commits changes and pushes them on GitHub. What this does is stage relevant files, create a git commit and push it on Github. Use this when development and testing has been done and changes are ready to be committed and pushed to GitHub.') %>
+<%= frontmatter(description: 'Commits changes and pushes them on GitHub. What this does is stage relevant files, create a git commit and push it on GitHub. Use this when development and testing has been done and changes are ready to be committed and pushed to GitHub.') %>
 
 # <%= skill_goal 'Committing changes' %>
 
@@ -6,8 +6,8 @@
   ### Stage all the files that should be part of the commit
 
   - Identify all the files that make sense to commit altogether as part of 1 commit.
-  - ALWAYS use `cli: git add {file1} {file2} ... {fileN}` to stage those identified files.
-  - NEVER use `cli: git add --all`, because some files may be modified by the USER and should not be part of your commit.
+  - Always use `cli: git add {file1} {file2} ... {fileN}` to stage those identified files.
+  - Never use `cli: git add --all`, because some files may be modified by the user and should not be part of your commit.
 
   Example:
   ```bash
@@ -17,13 +17,13 @@
   ### Create a temporary file with the commit description
 
   - Devise a meaningful commit comment that summarizes the changes you are going to commit.
-  - ALWAYS use `agent: write_to_file` tool to write the commit comment in a temporary file (later referenced as {description_file}), inside the directory `<%= tmp_path %>/commits`.
+  - Always use `agent: write_to_file` tool to write the commit comment in a temporary file (later referenced as {description_file}), inside the directory `<%= tmp_path %>/commits`.
 
   ### Create the commit
 
   - Find this skill directory path, later referenced as {skill_path}.
-  - ALWAYS use `cli: ruby {skill_path}/scripts/commit {description_file}` to create the git commit.
-  - NEVER use `cli: git commit` directly.
+  - Always use `cli: ruby {skill_path}/scripts/commit {description_file}` to create the git commit.
+  - Never use `cli: git commit` directly.
 
   Example:
   ```bash
@@ -32,7 +32,7 @@
 
   ### Delete the temporary commit description file
 
-  - ALWAYS delete the temporary description file {description_file} once the git commit has been done.
+  - Always delete the temporary description file {description_file} once the git commit has been done.
 
   Example:
   ```bash
@@ -41,7 +41,7 @@
 
   ### Push this commit on GitHub
 
-  - ALWAYS use `cli: git push github` to push the commit on GitHub.
+  - Always use `cli: git push github` to push the commit on GitHub.
 
   Example:
   ```bash
@@ -51,9 +51,9 @@
 
 ## When to use it
 
-- You MUST use it every time the USER asks you to commit your changes.
-- You MUST use it every time another skill specifically mentions `skill: <%= skill_name %>`.
-- You can use it every time you need to commit your changes.
+- Always use it every time the user asks you to commit your changes.
+- Always use it every time another skill specifically mentions `skill: <%= skill_name %>`.
+- Always use it every time you need to commit your changes.
 
 ## Usage and code examples
 
