fix(skillkit): correct subpath in installed skills metadata
Add fix_skills_metadata method to prepend 'skills/' to subpath in
.skillkit.json files after installation. This works around a skillkit
bug that causes 'skillkit update' to fail retrieving skill sources.

Also improve PR creation workflow by separating user question about
GitHub issues from the internal issue list compilation step.

--- a/skills.src/creating-pull-request/SKILL.md.erb
+++ b/skills.src/creating-pull-request/SKILL.md.erb
@@ -3,10 +3,13 @@
 # <%= skill_goal 'Creating a Pull Request' %>
 
 <% define_ordered_todo_list do -%>
-  ### Devise the list of GitHub issues linked to this Pull Request
+  ### Ask the user about additional list of GitHub issues linked to this Pull Request
 
   - Always use `agent: ask_followup_question` to ask the user which GitHub issues are closed by or related to this Pull Request, even if you know of some of those issues already. There could be more GitHub issues that you are not aware of.
-  - Also use any information from the previous user prompts to know which additional issues are closed by or related to this Pull Request.
+
+  ### Devise the list of GitHub issues linked to this Pull Request
+
+  - Use the information from all the user prompts to know which additional issues are closed by or related to this Pull Request.
 
   ### Create a temporary file with a good description for the Pull Request
 
