--- a/skills.src/creating-pull-request/SKILL.md.erb
+++ b/skills.src/creating-pull-request/SKILL.md.erb
@@ -1,4 +1,4 @@
-<%= frontmatter(description: 'Creates a Pull Request for the current git branch on GitHub. Use this when a Pull Request needs to be created to track the current feature branch changes on GitHub.') %>
+<%= skill(description: 'Creates a Pull Request for the current git branch on GitHub. Use this when a Pull Request needs to be created to track the current feature branch changes on GitHub.') %>
 
 # <%= skill_goal 'Creating a Pull Request' %>
 
