--- a/skills.src/editing-files/SKILL.md.erb
+++ b/skills.src/editing-files/SKILL.md.erb
@@ -1,4 +1,4 @@
-<%= frontmatter(description: 'Edits text files of any kind. What this does is defining a set of rules to follow when editing or creating any file. Use this when the user is asking to create or edit any file or when you need to create or edit files.') %>
+<%= skill(description: 'Edits text files of any kind. What this does is defining a set of rules to follow when editing or creating any file. Use this when the user is asking to create or edit any file or when you need to create or edit files.') %>
 
 # <%= skill_goal 'Editing files' %>
 
