--- a/skills.src/updating-doc/SKILL.md.erb
+++ b/skills.src/updating-doc/SKILL.md.erb
@@ -1,4 +1,4 @@
-<%= frontmatter(description: 'Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the user is asking for documentation or README to be updated.') %>
+<%= skill(description: 'Update the documentation of the project. What this does is update the README file of the project, its CLI usage and its Table of Content. Use this when a new development has been completed or when the user is asking for documentation or README to be updated.') %>
 
 # <%= skill_goal 'Updating documentation' %>
 
