--- a/skills.src/committing-changes/SKILL.md.erb
+++ b/skills.src/committing-changes/SKILL.md.erb
@@ -1,4 +1,4 @@
-<%= frontmatter(description: 'Commits changes and pushes them on GitHub. What this does is stage relevant files, create a git commit and push it on GitHub. Use this when development and testing has been done and changes are ready to be committed and pushed to GitHub.') %>
+<%= skill(description: 'Commits changes and pushes them on GitHub. What this does is stage relevant files, create a git commit and push it on GitHub. Use this when development and testing has been done and changes are ready to be committed and pushed to GitHub.') %>
 
 # <%= skill_goal 'Committing changes' %>
 
