--- a/skills.src/implementing-github-issue/SKILL.md.erb
+++ b/skills.src/implementing-github-issue/SKILL.md.erb
@@ -1,8 +1,6 @@
-<%= frontmatter(
+<%= skill(
   description: 'Implements what is described in a GitHub issue. What this does is first devise an implementation plan from the issue, execute the plan and validate production qualiy gates. Use this when the user is asking you to implement a GitHub issue.',
-  metadata: {
-    dependencies: %w[analyzing-github-issue validating-production-quality]
-  }
+  dependencies: %w[analyzing-github-issue validating-production-quality]
 ) %>
 
 # <%= skill_goal 'Implementing a GitHub issue' %>
